# python-hot-reload

./: README.md  pyproject.toml
src/python_hot_reload/: __init__.py  _strings.py  tricks.py
tests/: test_smoke.py
