[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-hot-reload"
version = "0.1.0"
description = "Dev-time Python module hot-reload and live class rebinding"
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.8"
authors = [{ name = "oldrepublicwizard" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/oldrepublicwizard/python-hot-reload"
Repository = "https://github.com/oldrepublicwizard/python-hot-reload"

[tool.setuptools.packages.find]
where = ["src"]
